--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "ejs": "^2.4.1",
-    "express": "^4.13.4",
+    "express": "^4.17.1",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
-    "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "morgan": "^1.10.0",
+    "object-assign": "^4.1.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1"
   },
   "engine": {
     "node": "*",
