--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "mongodb": "^2.1.16",
     "morgan": "^1.10.0",
     "object-assign": "^4.1.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1"
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-buttons": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "engine": {
     "node": "*",
